video-player.php video adaptive fixed / Subscribe btn restored

--- a/assets/css/assets/blocks/main_channel-page/author-current-video.css
+++ b/assets/css/assets/blocks/main_channel-page/author-current-video.css
@@ -2,6 +2,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 .author-current-video__block {
   padding: 4.4rem 0 0 0;
   width: 100%;
