--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,6 +263,7 @@ summary {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -448,6 +449,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
@@ -566,6 +568,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 header {
   z-index: 100;
   background-color: white;
@@ -789,10 +792,12 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Font-colors */
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 .author-current-video__block {
   padding: 4.4rem 0 0 0;
   width: 100%;
@@ -851,6 +856,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 @media (max-width: 576px) {
   .channel__navigation {
     margin: 0;
@@ -1070,6 +1076,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -1077,6 +1084,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -1159,6 +1167,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -1166,6 +1175,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -1266,6 +1276,7 @@ main {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
@@ -1496,10 +1507,29 @@ main.video-player-block .current-video .current-video__description img {
   width: 8rem;
   height: 8rem;
 }
-@media (max-width: 390px) {
+@media (max-width: 576px) {
   main.video-player-block .current-video .current-video__description img {
     width: 5rem;
     height: 5rem;
+  }
+}
+main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+  display: none;
+  font-size: 2rem;
+}
+@media (max-width: 576px) {
+  main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+    display: block;
+    background-color: transparent;
+    border: unset;
+    font-size: 2rem;
+    color: #FF0000;
+    margin-left: auto;
+  }
+}
+@media (max-width: 390px) {
+  main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+    font-size: 1.6rem;
   }
 }
 main.video-player-block .current-video .current-video__description .current-video-description {
@@ -1520,6 +1550,14 @@ main.video-player-block .current-video .current-video__description .current-vide
 main.video-player-block .current-video .current-video__description .current-video-description .show-more {
   font-size: 2rem;
 }
+@media (max-width: 576px) {
+  main.video-player-block .current-video .current-video__description .current-video-description .subscribed-qty {
+    display: block;
+  }
+  main.video-player-block .current-video .current-video__description .current-video-description .published-date {
+    display: none;
+  }
+}
 @media (max-width: 390px) {
   main.video-player-block .current-video .current-video__description .current-video-description {
     padding: 0 0 0 1rem;
@@ -1529,11 +1567,7 @@ main.video-player-block .current-video .current-video__description .current-vide
     line-height: 2rem;
     margin: 0 0 0.4rem;
   }
-  main.video-player-block .current-video .current-video__description .current-video-description .published-date {
-    display: none;
-  }
   main.video-player-block .current-video .current-video__description .current-video-description .subscribed-qty {
-    display: block;
     font-size: 1.2rem;
     line-height: 1.5rem;
   }
@@ -1615,6 +1649,11 @@ main.video-player-block .current-video .current-video__description .video-conten
     width: 100%;
   }
 }
+@media (max-width: 838px) {
+  main.video-player-block .current-video {
+    padding: 0;
+  }
+}
 @media (max-width: 576px) {
   main.video-player-block .current-video {
     padding: 0;
@@ -1682,6 +1721,11 @@ main.video-player-block .next-video__block .next-video__block__header div p {
     padding: 0 4rem 0 0;
   }
 }
+@media (max-width: 576px) {
+  main.video-player-block .next-video__block .next-video__block__header {
+    padding: 0;
+  }
+}
 @media (max-width: 390px) {
   main.video-player-block .next-video__block .next-video__block__header {
     margin: 0 0 1.3rem 0;
@@ -1722,6 +1766,7 @@ main.video-player-block .next-video__block .next-video {
 }
 @media (max-width: 1050px) {
   main.video-player-block .next-video__block .next-video {
+    width: 100%;
     grid-template-rows: unset;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
@@ -1848,7 +1893,12 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 }
 
 .mobile {
-  margin: 0 1.6rem;
+  margin: 0;
+}
+@media (max-width: 838px) {
+  .mobile {
+    margin: 0 1.6rem;
+  }
 }
 
 .header-options {
@@ -1874,6 +1924,7 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -1881,6 +1932,7 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -1993,6 +2045,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -2000,6 +2053,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
