--- a/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
+++ b/assets/scss/assets/blocks/main_video-player/main_video-player-page.scss
@@ -227,16 +227,35 @@ main.video-player-block {
       img {
         width: 8rem;
         height: 8rem;
-        @media (max-width: $xs) {
+        @media (max-width: $sm) {
           width: 5rem;
           height: 5rem;
         }
       }
+
+      .subscribe-channel__btn {
+        display: none;
+        font-size: 2rem;
+        @media (max-width: $sm) {
+          display: block;
+          background-color: transparent;
+          border: unset;
+          font-size: 2rem;
+          color: $button-color__active-text;
+          margin-left: auto;
+        }
+
+        @media (max-width: $xs) {
+          font-size: 1.6rem;
+        }
+      }
+
       .current-video-description {
         width: 82rem;
         padding: 0 0 0 1.2rem;
         .subscribed-qty {
           display: none;
+
         }
         .published-date {
           font-size: 1.3rem;
@@ -249,6 +268,17 @@ main.video-player-block {
         .show-more {
           font-size: 2rem;
         }
+
+        @media (max-width: $sm) {
+          .subscribed-qty {
+            display: block;
+          }
+          .published-date {
+            display: none;
+          }
+        }
+
+
         @media (max-width: $xs) {
           padding: 0 0 0 1rem;
           h2 {
@@ -256,11 +286,7 @@ main.video-player-block {
             line-height: 2rem;
             margin: 0 0 0.4rem;
           }
-          .published-date {
-            display: none;
-          }
           .subscribed-qty {
-            display: block;
             font-size: 1.2rem;
             line-height: 1.5rem;
           }
@@ -342,6 +368,10 @@ main.video-player-block {
       width: 100%;
     }
 
+    @media (max-width: $md) {
+     padding: 0;
+    }
+
     @media (max-width: $sm) {
       padding: 0;
       video {
@@ -409,6 +439,10 @@ main.video-player-block {
         padding: 0 4rem 0 0;
       }
 
+      @media (max-width: $sm) {
+        padding: 0;
+      }
+
       @media (max-width: $xs) {
         margin: 0 0 1.3rem 0;
         h2 {
@@ -448,6 +482,7 @@ main.video-player-block {
       row-gap: 3rem;
 
       @media (max-width: $lg) {
+        width: 100%;
         grid-template-rows: unset;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 2rem;
@@ -588,7 +623,10 @@ main.video-player-block {
 }
 
 .mobile {
-  margin: 0 1.6rem;
+  margin: 0;
+  @media (max-width: $md) {
+    margin: 0 1.6rem;
+  }
 }
 
 .header-options {
