--- a/assets/scss/assets/typography/font-colors.scss
+++ b/assets/scss/assets/typography/font-colors.scss
@@ -18,3 +18,5 @@ $font-color__navigation-link_active: #FF0000;
 $border-color__default: #000000;
 $border-color__active: #FF0000;
 
+/* Button */
+$button-color__active-text: #FF0000;
