--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -33,6 +33,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 header {
   z-index: 100;
   background-color: white;
@@ -256,10 +257,12 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Font-colors */
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 .author-current-video__block {
   padding: 4.4rem 0 0 0;
   width: 100%;
@@ -318,6 +321,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 @media (max-width: 576px) {
   .channel__navigation {
     margin: 0;
@@ -537,6 +541,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -544,6 +549,7 @@ header .container .header__user-block .header__user-block__user-profile img {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -626,6 +632,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -633,6 +640,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -733,6 +741,7 @@ main {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Alerts and Notifications */
 /* Borders */
 /* Search form */
@@ -963,10 +972,29 @@ main.video-player-block .current-video .current-video__description img {
   width: 8rem;
   height: 8rem;
 }
-@media (max-width: 390px) {
+@media (max-width: 576px) {
   main.video-player-block .current-video .current-video__description img {
     width: 5rem;
     height: 5rem;
+  }
+}
+main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+  display: none;
+  font-size: 2rem;
+}
+@media (max-width: 576px) {
+  main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+    display: block;
+    background-color: transparent;
+    border: unset;
+    font-size: 2rem;
+    color: #FF0000;
+    margin-left: auto;
+  }
+}
+@media (max-width: 390px) {
+  main.video-player-block .current-video .current-video__description .subscribe-channel__btn {
+    font-size: 1.6rem;
   }
 }
 main.video-player-block .current-video .current-video__description .current-video-description {
@@ -987,6 +1015,14 @@ main.video-player-block .current-video .current-video__description .current-vide
 main.video-player-block .current-video .current-video__description .current-video-description .show-more {
   font-size: 2rem;
 }
+@media (max-width: 576px) {
+  main.video-player-block .current-video .current-video__description .current-video-description .subscribed-qty {
+    display: block;
+  }
+  main.video-player-block .current-video .current-video__description .current-video-description .published-date {
+    display: none;
+  }
+}
 @media (max-width: 390px) {
   main.video-player-block .current-video .current-video__description .current-video-description {
     padding: 0 0 0 1rem;
@@ -996,11 +1032,7 @@ main.video-player-block .current-video .current-video__description .current-vide
     line-height: 2rem;
     margin: 0 0 0.4rem;
   }
-  main.video-player-block .current-video .current-video__description .current-video-description .published-date {
-    display: none;
-  }
   main.video-player-block .current-video .current-video__description .current-video-description .subscribed-qty {
-    display: block;
     font-size: 1.2rem;
     line-height: 1.5rem;
   }
@@ -1082,6 +1114,11 @@ main.video-player-block .current-video .current-video__description .video-conten
     width: 100%;
   }
 }
+@media (max-width: 838px) {
+  main.video-player-block .current-video {
+    padding: 0;
+  }
+}
 @media (max-width: 576px) {
   main.video-player-block .current-video {
     padding: 0;
@@ -1149,6 +1186,11 @@ main.video-player-block .next-video__block .next-video__block__header div p {
     padding: 0 4rem 0 0;
   }
 }
+@media (max-width: 576px) {
+  main.video-player-block .next-video__block .next-video__block__header {
+    padding: 0;
+  }
+}
 @media (max-width: 390px) {
   main.video-player-block .next-video__block .next-video__block__header {
     margin: 0 0 1.3rem 0;
@@ -1189,6 +1231,7 @@ main.video-player-block .next-video__block .next-video {
 }
 @media (max-width: 1050px) {
   main.video-player-block .next-video__block .next-video {
+    width: 100%;
     grid-template-rows: unset;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
@@ -1315,7 +1358,12 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 }
 
 .mobile {
-  margin: 0 1.6rem;
+  margin: 0;
+}
+@media (max-width: 838px) {
+  .mobile {
+    margin: 0 1.6rem;
+  }
 }
 
 .header-options {
@@ -1341,6 +1389,7 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -1348,6 +1397,7 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
@@ -1460,6 +1510,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -1467,6 +1518,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
