--- a/assets/css/assets/blocks/main_home-page/main_home-page.css
+++ b/assets/css/assets/blocks/main_home-page/main_home-page.css
@@ -2,6 +2,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -10,6 +11,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 @import url("https://use.typekit.net/jrb6nlz.css");
 * {
   font-family: "Mulish", sans-serif;
@@ -93,6 +95,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -100,6 +103,7 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
