--- a/assets/css/assets/blocks/nav/nav.css
+++ b/assets/css/assets/blocks/nav/nav.css
@@ -2,6 +2,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
    Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
 */
@@ -10,6 +11,7 @@
 /* Search-form */
 /* Links */
 /* Borders */
+/* Button */
 * {
   font-family: "Mulish", sans-serif;
   color: #C2C2C2;
