--- a/assets/css/assets/blocks/blocks.css
+++ b/assets/css/assets/blocks/blocks.css
@@ -638,7 +638,7 @@ input::placeholder {
 /* Borders */
 /* Button */
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: #C2C2C2;
   font-weight: 400;
 }
@@ -1387,15 +1387,15 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Search-form */
 /* Links */
 /* Borders */
-/* Button */
 /* Importing font: Mulish - 300 / 400 / 700 / 800
+   Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
+*/
 /* Font-colors */
 /* Search-form */
 /* Links */
 /* Borders */
-/* Button */
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: #C2C2C2;
   font-weight: 400;
 }
@@ -1506,15 +1506,16 @@ input::placeholder {
 /* Search-form */
 /* Links */
 /* Borders */
-/* Button */
-/* Importing font: Mulish - 300 / 400 / 700 / 800
+/* Importing font: Muli - 300 / 400 / 700 / 800
+   Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
+*/
 /* Font-colors */
 /* Search-form */
 /* Links */
 /* Borders */
 /* Button */
 * {
-  font-family: "Muli", sans-serif;
+  font-family: "Mulish", sans-serif;
   color: #C2C2C2;
   font-weight: 400;
 }
