--- a/assets/css/assets/blocks/main_video-player/main_video-player-page.css
+++ b/assets/css/assets/blocks/main_video-player/main_video-player-page.css
@@ -635,11 +635,11 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
   }
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
+  "Droid Sans Mono", monospace, monospace;
   white-space: pre;
   display: block;
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 84 \2502        border-bottom: 1px solid $color_border-default;\a    \2502                                 ^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   assets/scss/assets/blocks/main_video-player/main_video-player-page.scss 84:32  root stylesheet";
-}
+  content: "";
+}}
