--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1927,6 +1927,9 @@ main.video-player-block .next-video__block .next-video .content__tab .content-in
 /* Links */
 /* Borders */
 /* Button */
+/* Importing font: Mulish - 300 / 400 / 700 / 800
+   Adobe Fonts https://fonts.adobe.com/my_fonts#web_projects-section
+*/
 /* Font-colors */
 /* Search-form */
 /* Links */
