--- a/assets/css/assets/blocks/main_home-page/recomended-channels.css
+++ b/assets/css/assets/blocks/main_home-page/recomended-channels.css
@@ -15,6 +15,11 @@
     padding: 0 1.8rem;
   }
 }
+@media (max-width: 1050px) {
+  .recommended__channels .channel__info .video-content__navigation .video-content__subscription-stat {
+    display: none;
+  }
+}
 @media (max-width: 390px) {
   .recommended__channels {
     display: none;
