--- a/assets/scss/assets/blocks/main_channel-page/author-current-video.scss
+++ b/assets/scss/assets/blocks/main_channel-page/author-current-video.scss
@@ -34,8 +34,8 @@
     }
 
     @media (max-width: $lg) {
-      margin: 0 auto;
-      padding: 2rem 2.1rem 1rem;
+      margin: 0;
+      padding: 2rem 0 1rem;
     }
 
     h1 {
