--- a/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
+++ b/assets/scss/assets/blocks/main_channel-page/main_channel-page.scss
@@ -93,7 +93,7 @@
           width: 83rem
         }
         @media (max-width: $lg) {
-          margin: 0 3rem 0 0;
+          margin: 0;
         }
         @media (max-width: $sm) {
           margin: 0;
