--- a/assets/css/assets/blocks/main_channel-page/author-current-video.css
+++ b/assets/css/assets/blocks/main_channel-page/author-current-video.css
@@ -39,8 +39,8 @@
 }
 @media (max-width: 1050px) {
   .author-current-video__block .current-video__description {
-    margin: 0 auto;
-    padding: 2rem 2.1rem 1rem;
+    margin: 0;
+    padding: 2rem 0 1rem;
   }
 }
 .author-current-video__block .current-video__description h1 {
