--- a/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
+++ b/assets/css/assets/blocks/main_home-page/subscribed-author/subscribed-author.css
@@ -50,7 +50,15 @@ input::placeholder {
 }
 @media (max-width: 1050px) {
   .subscribed-author {
-    padding: 4rem 1.8rem 0;
+    padding: 4rem 0 0;
+  }
+  .subscribed-author.channel {
+    padding: 2.4rem 0 0;
+  }
+}
+@media (max-width: 838px) {
+  .subscribed-author {
+    padding: 3rem 1.8rem 0;
     margin: 0;
   }
   .subscribed-author.channel {
@@ -58,6 +66,9 @@ input::placeholder {
   }
 }
 @media (max-width: 576px) {
+  .subscribed-author {
+    padding-top: 4.5rem;
+  }
   .subscribed-author.channel {
     padding: 0 1.8rem 0;
   }
