--- a/assets/scss/assets/blocks/main_home-page/recomended-channels.scss
+++ b/assets/scss/assets/blocks/main_home-page/recomended-channels.scss
@@ -15,6 +15,16 @@
     padding: 0 1.8rem;
   }
 
+  @media (max-width: $lg) {
+    .channel__info {
+      .video-content__navigation {
+        .video-content__subscription-stat {
+          display: none;
+        }
+      }
+    }
+  }
+
   @media (max-width: $xs) {
     display: none;
   }
