--- a/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
+++ b/assets/scss/assets/blocks/main_home-page/subscribed-author/subscribed-author.scss
@@ -6,7 +6,14 @@
   padding: 2.9rem 0 0 0;
 
   @media (max-width: $lg) {
-    padding: 4rem 1.8rem 0;
+    padding: 4rem 0 0;
+    &.channel {
+      padding: 2.4rem 0 0;
+    }
+  }
+
+  @media (max-width: $md) {
+    padding: 3rem 1.8rem 0;
     margin: 0;
     &.channel {
       padding: 2.4rem 1.8rem 0;
@@ -14,6 +21,7 @@
   }
 
   @media (max-width: $sm) {
+    padding-top: 4.5rem;
     &.channel {
       padding: 0 1.8rem 0;
     }
