main page ready

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -322,6 +322,18 @@ input::placeholder {
   display: block;
 }
 
+.recommended .horizontal-scroll,
+.recommended__channels .horizontal-scroll,
+.subscribed-author .horizontal-scroll {
+  display: flex;
+  overflow-x: auto;
+}
+.recommended .horizontal-scroll::-webkit-scrollbar,
+.recommended__channels .horizontal-scroll::-webkit-scrollbar,
+.subscribed-author .horizontal-scroll::-webkit-scrollbar {
+  display: none;
+}
+
 .channel__info {
   display: flex;
   align-items: center;
@@ -1153,9 +1165,6 @@ input::placeholder {
 }
 .subscribed-author .subscribed-author__content {
   padding: 3rem 0 0 0;
-  overflow: hidden;
-  display: inline-grid;
-  grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
 }
 @media (max-width: 576px) {
@@ -1231,9 +1240,6 @@ input::placeholder {
 }
 .recommended .recommended__content {
   padding: 3rem 0 0 0;
-  overflow: hidden;
-  display: inline-grid;
-  grid-template-columns: repeat(3, 1fr);
   column-gap: 4rem;
 }
 
@@ -1266,9 +1272,6 @@ input::placeholder {
 }
 .recommended__channels .recommended__channels__content {
   padding: 3rem 0 0 0;
-  overflow: hidden;
-  display: inline-grid;
-  grid-template-columns: repeat(6, 1fr);
   column-gap: 4rem;
 }
 
