--- a/assets/css/assets/global/global.css
+++ b/assets/css/assets/global/global.css
@@ -24,6 +24,18 @@
   display: block;
 }
 
+.recommended .horizontal-scroll,
+.recommended__channels .horizontal-scroll,
+.subscribed-author .horizontal-scroll {
+  display: flex;
+  overflow-x: auto;
+}
+.recommended .horizontal-scroll::-webkit-scrollbar,
+.recommended__channels .horizontal-scroll::-webkit-scrollbar,
+.subscribed-author .horizontal-scroll::-webkit-scrollbar {
+  display: none;
+}
+
 .channel__info {
   display: flex;
   align-items: center;
